fix contrast error

--- a/style.css
+++ b/style.css
@@ -748,7 +748,7 @@ h4 {
 }
 
 .white-ltc-white {
-    color: #FFFFFF;
+    color: #FFFFFF !important;
 }
 
 .portfolio-thumb {
